# Multi-Step-Secretary-Agent

./: Dockerfile  README.md  app.py  env.py  environment.py  grader.py  inference.py  llm_agent.py  nlp_parser.py  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt  run.py  start.sh  tools_schema.py
openenv-dashboard/: build.txt  index.html  package-lock.json  package.json
openenv-dashboard/src/: App.jsx  index.css
server/: app.py
tasks/: pipeline-tasks.json
