[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-step-secretary-agent"
version = "1.0.0"
description = "A multi-step secretary AI agent environment for the Meta PyTorch Hackathon."
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "openai",
    "python-dotenv",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "scikit-learn",
    "joblib",
]

[project.scripts]
server = "server.app:main"
